Major changes towards SSH only use